Make Airtable failure non-blocking and update table name example

--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,9 @@ TWILIO_PHONE_NUMBER=+1234567890
 TWILIO_VOICE=Polly.Joanna
 
 # Airtable Configuration
-AIRTABLE_API_KEY=your_airtable_api_key
-AIRTABLE_BASE_ID=your_base_id
-AIRTABLE_TABLE_NAME=Leads
+AIRTABLE_API_KEY=your_airtable_api_key_here
+AIRTABLE_BASE_ID=your_base_id_here
+AIRTABLE_TABLE_NAME=tblWzRvjVTwgUiRup  # Use table ID, not table name
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
